--- a/periodicTable.html
+++ b/periodicTable.html
@@ -1,8 +1,167 @@
 <!DOCTYPE html>
 <head>
-    <title>Periodic Table</title>
+    <title>Periodic Table</title
 </head>
 <body>
+   
+    <center>
+        <h1 style="background-color: yellow;">The Periodic Table</h1>
+    <table style="text-align: center;" border="1" width = "1000">
+        <tr>
+            <td bgcolor="orange">1<br>H</td>
+            <td style="empty-cells: hide;" colspan="16"></td>
+            <td bgcolor="pink">2<br>He</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">3<br>Li</td>
+            <td bgcolor="cyan">4<br>Be</td>
+            <td style="empty-cells: hide;" colspan="10"></td>
+            <td bgcolor="olive">5<br>B</td>
+            <td bgcolor="orange">6<br>C</td>
+            <td bgcolor="orange">7<br>N</td>
+            <td bgcolor="orange">8<br>O</td>
+            <td bgcolor="orange">9<br>F</td>
+            <td bgcolor="pink">10<br>Ne</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">11<br>Na</td>
+            <td bgcolor="cyan">12<br>Mg</td>
+            <td style="empty-cells: hide;" colspan="10"></td>
+            <td bgcolor="violet">13<br>Al</td>
+            <td bgcolor="olive">14<br>Si</td>
+            <td bgcolor="orange">15<br>P</td>
+            <td bgcolor="orange">16<br>S</td>
+            <td bgcolor="orange">17<br>Cl</td>
+            <td bgcolor="pink">18<br>Ar</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">19<br>K</td>
+            <td bgcolor="cyan">Ca</td>
+            <td bgcolor="yellow">39<br>Sc</td>
+            <td bgcolor="yellow">22<br>Ti</td>
+            <td bgcolor="yellow">23<br>V</td>
+            <td bgcolor="yellow">24<br>Cr</td>
+            <td bgcolor="yellow">25<br>Mn</td>
+            <td bgcolor="yellow">26<br>Fe</td>
+            <td bgcolor="yellow">27<br>Co</td>
+            <td bgcolor="yellow">28<br>Ni</td>
+            <td bgcolor="yellow">29<br>Cu</td>
+            <td bgcolor="yellow">30<br>Zn</td>
+            <td bgcolor="violet">31<br>Ga</td>
+            <td bgcolor="olive">32<br>Ge</td>
+            <td bgcolor="olive">33<br>As</td>
+            <td bgcolor="orange">34<br>Se</td>
+            <td bgcolor="orange">35<br>Br</td>
+            <td bgcolor="pink">36<br>Kr</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">37<br>Rb</td>
+            <td bgcolor="cyan">38<br>Sr</td>
+            <td bgcolor="yellow">39<br>Y</td>
+            <td bgcolor="yellow">40<br>Zr</td>
+            <td bgcolor="yellow">41<br>Nb</td>
+            <td bgcolor="yellow">42<br>Mo</td>
+            <td bgcolor="yellow">43<br>Tc</td>
+            <td bgcolor="yellow">44<br>Ru</td>
+            <td bgcolor="yellow">45<br>Rh</td>
+            <td bgcolor="yellow">46<br>Pd</td>
+            <td bgcolor="yellow">47<br>Ag</td>
+            <td bgcolor="yellow">48<br>Cd</td>
+            <td bgcolor=" violet">49<br>In</td>
+            <td bgcolor="violet">50<br>Sn</td>
+            <td bgcolor="olive">51<br>Sb</td>
+            <td bgcolor="olive">52<br>Te</td>
+            <td bgcolor="orange">53<br>I</td>
+            <td bgcolor="pink">54<br>Xe</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">55<br>Cs</td>
+            <td bgcolor="cyan">56<br>Ba</td>
+            <td bgcolor="yellow">57 <br>La</td>
+            <td bgcolor="yellow">72<br>Hf</td>
+            <td bgcolor="yellow">73<br>Ta</td>
+            <td bgcolor="yellow">74<br>W</td>
+            <td bgcolor="yellow">75<br>Re</td>
+            <td bgcolor="yellow">76<br>Os</td>
+            <td bgcolor="yellow">77<br>Ir</td>
+            <td bgcolor="yellow">76<br>Pt</td>
+            <td bgcolor="yellow">77<br>Au</td>
+            <td bgcolor="yellow">78<br>Hg</td>
+            <td bgcolor="violet">79<br>Ti</td>
+            <td bgcolor="violet">80<br>Pb</td>
+            <td bgcolor="violet">81<br>Bi</td>
+            <td bgcolor="violet">82<br>Po</td>
+            <td bgcolor="violet">83<br>At</td>
+            <td bgcolor="pink">84<br>Rn</td>
+        </tr>
+
+        <tr>
+            <td bgcolor="pink">87<br>Fr</td>
+            <td bgcolor="cyan">88<br>Ra</td>
+            <td bgcolor="yellow">89 <br>Ac</td>
+            <td bgcolor="yellow">104<br>Rf</td>
+            <td bgcolor="yellow">105<br>Db</td>
+            <td bgcolor="yellow">106<br>Sg</td>
+            <td bgcolor="yellow">107<br>Bh</td>
+            <td bgcolor="yellow">108<br>Hs</td>
+            <td bgcolor="Gray">109<br>Mt</td>
+            <td bgcolor="Gray">110<br>Ds</td>
+            <td bgcolor="Gray">111<br>Rg</td>
+            <td bgcolor="Gray">112<br>Cn</td>
+            <td bgcolor="Gray">113<br>Nh</td>
+            <td bgcolor="Gray">114<br>Fl</td>
+            <td bgcolor="Gray">115<br>Mc</td>
+            <td bgcolor="Gray">116<br>Lv</td>
+            <td bgcolor="Gray">117<br>Ts</td>
+            <td bgcolor="Gray">118<br>Og</td>
+        </tr>
+    </table>
+
+</br>
+</br>
     
+
+        <table style="text-align: center;" border="1" width = "700">
+          <tr>
+            <td bgcolor="pink">58<br>Ce</td>
+            <td bgcolor="pink">59<br>Pr</td>
+            <td bgcolor="pink">60<br>Nd</td>
+            <td bgcolor="pink">61<br>Pm</td>
+            <td bgcolor="pink">62<br>Sm</td>
+            <td bgcolor="pink">63<br>Eu</td>
+            <td bgcolor="pink">64<br>Gd</td>
+            <td bgcolor="pink">65<br>Tb</td>
+            <td bgcolor="pink">66<br>Dy</td>
+            <td bgcolor="pink">67<br>Ho</td>
+            <td bgcolor="pink">68<br>Er</td>
+            <td bgcolor="pink">69<br>Tm</td>
+            <td bgcolor="pink">70<br>Yb</td>
+            <td bgcolor="pink">71<br>Lu</td>
+          </tr>
+
+          <tr>
+            <td bgcolor="cyan"><br>Th</td>
+            <td  bgcolor="cyan"><br>Pa</td>
+            <td  bgcolor="cyan"><br>U</td>
+            <td  bgcolor="cyan"><br>Np</td>
+            <td  bgcolor="cyan"><br>Pu</td>
+            <td  bgcolor="cyan"><br>Am</td>
+            <td  bgcolor="cyan"><br>Cm</td>
+            <td  bgcolor="cyan"><br>Bk</td>
+            <td  bgcolor="cyan"><br>Cf</td>
+            <td  bgcolor="cyan"><br>Es</td>
+            <td  bgcolor="cyan"><br>Fm</td>
+            <td  bgcolor="cyan"><br>Md</td>
+            <td  bgcolor="cyan"><br>No</td>
+            <td  bgcolor="cyan"><br>Lr</td>
+          </tr>
+        </table>
+    </center>
 </body>
+
 </html>
